/**
 * The MIT License
 * Copyright (c) 2014-2016 Ilkka Seppälä
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy
 * of this software and associated documentation files (the "Software"), to deal
 * in the Software without restriction, including without limitation the rights
 * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
 * copies of the Software, and to permit persons to whom the Software is
 * furnished to do so, subject to the following conditions:
 *
 * The above copyright notice and this permission notice shall be included in
 * all copies or substantial portions of the Software.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
 * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
 * LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
 * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
 * THE SOFTWARE.
 */
package com.ryan;

/**
 * Customer Class responsible for producing unit of work that can be expressed as {@link Item} and submitted
 * to queueList
 */
public class Producer {
  private final int queueCount;
  private ItemQueue[] queueList = null;

  private final String name;

  private int itemId;

  /**
   * Customer the producer with the random queue list
   * @param name producer name
   * @param queueList shared queueList
   */
  public Producer(String name, ItemQueue[] queueList) {
    this.name = name;
    this.queueList = queueList;
    queueCount = queueList.length;
  }

  /**
   * Put item in the queueList
   */
  public void produce() throws InterruptedException {

    Item item = new Item(name, itemId++);
    int index = itemId % queueCount;
    queueList[index].put(item);
    //Random random = new Random();
    //Thread.sleep(random.nextInt(2));
  }
}
