@startuml
package com.iluwatar.producer.consumer {
  class App {
    - LOGGER : Logger {static}
    + App()
    + main(args : String[]) {static}
  }
  class Consumer {
    - LOGGER : Logger {static}
    - name : String
    - queueList : ItemQueue
    + Consumer(name : String, queueList : ItemQueue)
    + consume()
  }
  class Item {
    - id : int
    - producer : String
    + Item(producer : String, id : int)
    + getId() : int
    + getProducer() : String
  }
  class ItemQueue {
    - queueList : BlockingQueue<Item>
    + ItemQueue()
    + put(item : Item)
    + take() : Item
  }
  class Producer {
    - itemId : int
    - name : String
    - queueList : ItemQueue
    + Producer(name : String, queueList : ItemQueue)
    + produce()
  }
}
Consumer -->  "-queueList" ItemQueue
Producer -->  "-queueList" ItemQueue
ItemQueue -->  "-queueList" Item
@enduml